[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/BaseCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/tinyRobot/TinyRobot.gd" type="Script" id=2]
[ext_resource path="res://characters/tinyRobot/TinyProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/characters/tinyRobot/robot.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.50455
height = 6.46625

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.505
height = 6.466

[sub_resource type="Animation" id=3]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=4]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 11 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 58.5909

[node name="Robot" instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
speed = 50
PROJECTILE = ExtResource( 3 )
PROJECTILE_COOLDOWN = 2.0

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 4 )
vframes = 2
hframes = 6

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2( 1, 0.763 )
shape = SubResource( 1 )

[node name="Hitbox" parent="." index="2"]
position = Vector2( 0, 1 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
position = Vector2( 0.906036, -0.176608 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
playback_speed = 5.0
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="ProjectileSpawn" type="Position2D" parent="." index="4"]

[node name="ProjectileTimer" type="Timer" parent="." index="5"]
wait_time = 2.0

[node name="Vision" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision" index="0"]
shape = SubResource( 5 )

[node name="ThinkTimer" type="Timer" parent="." index="7"]
wait_time = 5.0
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_ProjectileTimer_timeout"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="timeout" from="ThinkTimer" to="." method="_on_ThinkTimer_timeout"]
